@@ -1,3 +1,9 @@
+2012-12-05  Andreas Schwab  <schwab@suse.de>
+
+	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S
+	(__pthread_cond_timedwait): If possible use FUTEX_WAIT_BITSET to
+	directly use absolute timeout.
+
 2012-12-28  Andi Kleen  <ak@linux.intel.com>
 
         * pthread_rwlock_tryrdlock.c (__pthread_rwlock_tryrdlock): Convert
